add new website from server na

--- a/xem-phim-moi/gia-gan-my-nhan-va-gang-to/index.html
+++ b/xem-phim-moi/gia-gan-my-nhan-va-gang-to/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             6
             </dd>
             <br/>
            </dl>
@@ -1585,7 +1585,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lust, Caution
             </span>
             <span class="list-top-movie-item-view">
-             65 lượt xem
+             67 lượt xem
             </span>
             <span class="rate-vote rate-vote-10">
             </span>
@@ -1607,7 +1607,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Dragon Hunting.Soul Suppressing Coffin
             </span>
             <span class="list-top-movie-item-view">
-             62 lượt xem
+             63 lượt xem
             </span>
             <span class="rate-vote rate-vote-10">
             </span>
@@ -1629,29 +1629,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Brothers For Life (Season 2)
             </span>
             <span class="list-top-movie-item-view">
-             53 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
-           <span class="status">
-            FHD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thiếu Niên Ca Hành
-            </span>
-            <span class="list-top-movie-item-en">
-             The Blood of Youth
-            </span>
-            <span class="list-top-movie-item-view">
-             51 lượt xem
+             54 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1673,7 +1651,29 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             49 lượt xem
+             54 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
+           <span class="status">
+            FHD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thiếu Niên Ca Hành
+            </span>
+            <span class="list-top-movie-item-en">
+             The Blood of Youth
+            </span>
+            <span class="list-top-movie-item-view">
+             52 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1694,18 +1694,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/rac-roi-be-bi-phan-2" title="Rắc Rối Bé Bi (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/cho-den-noi-tim-ban-tinh-cho-ban" title="Chợ Đen: Nơi Tìm Bạn Tình Cho Bạn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/rac-roi-be-bi-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cho-den-noi-tim-ban-tinh-cho-ban-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Rắc Rối Bé Bi (Phần 2)
+             Chợ Đen: Nơi Tìm Bạn Tình Cho Bạn
             </span>
             <span class="list-top-movie-item-en">
-             Baby Fever Season 2
+             중고마켓: 쎅파 구하기
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tiffany-haddish-gioi-thieu-ho-da-san-sang-phan-1" title="Tiffany Haddish giới thiệu: Họ đã sẵn sàng (Phần 1)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tiffany-haddish-gioi-thieu-ho-da-san-sang-phan-1-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tiffany Haddish giới thiệu: Họ đã sẵn sàng (Phần 1)
+            </span>
+            <span class="list-top-movie-item-en">
+             Tiffany Haddish Presents: They Ready (Season 1)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1716,21 +1738,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoan-tien" title="Hoàn Tiền">
+          <a class="list-top-movie-link" href="/phim-moi/20-days-in-mariupol" title="20 Days in Mariupol">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoan-tien-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/20-days-in-mariupol-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Hoàn Tiền
+             20 Days in Mariupol
             </span>
             <span class="list-top-movie-item-en">
-             Breaking and Re-entering
+             20 Days in Mariupol
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1738,18 +1760,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-con-quy-cua-da-vinci-phan-1" title="Những Con Quỷ Của Da Vinci (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/tham-tu-lung-danh-conan-ke-hanh-phap-zero" title="Thám Tử Lừng Danh Conan: Kẻ Hành Pháp Zero">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-con-quy-cua-da-vinci-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-tu-lung-danh-conan-ke-hanh-phap-zero-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những Con Quỷ Của Da Vinci (Phần 1)
+             Thám Tử Lừng Danh Conan: Kẻ Hành Pháp Zero
             </span>
             <span class="list-top-movie-item-en">
-             Da Vinci's Demons (Season 1)
+             Detective Conan: Zero the Enforcer
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1760,40 +1782,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/qua-nhanh-qua-nguy-hiem-3-chinh-phuc-tokyo" title="Quá Nhanh Quá Nguy Hiểm 3: Chinh Phục Tokyo">
+          <a class="list-top-movie-link" href="/phim-moi/nu-hiep-si-diet-rong" title="Nữ Hiệp Sĩ Diệt Rồng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/qua-nhanh-qua-nguy-hiem-3-chinh-phuc-tokyo-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-hiep-si-diet-rong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Quá Nhanh Quá Nguy Hiểm 3: Chinh Phục Tokyo
+             Nữ Hiệp Sĩ Diệt Rồng
             </span>
             <span class="list-top-movie-item-en">
-             The Fast and the Furious: Tokyo Drift
-            </span>
-            <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/o-re-cat-hung-cao-chieu" title="Ở Rể: Cát Hưng Cao Chiếu">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/o-re-cat-hung-cao-chieu-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Ở Rể: Cát Hưng Cao Chiếu
-            </span>
-            <span class="list-top-movie-item-en">
-             My Heroic Husband
+             Dragon Age: Dawn of the Seeker
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
